--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="bloco-endereco">
                         <strong>Atendimento Comercial:</strong>
                         <span>Segunda a sexta: das 08:00 às 18:00.</span>                       
-                        <span>Telefone: (11) 91000-8056</span>
+                        <span>Telefone: (11) 3171-0549</span>
                         <span>Whatsapp: (11) 91000-8056</span>
                     </div>
                 </div>
@@ -425,7 +425,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="bloco-endereco">
                         <strong>Assistência Técnica:</strong>
                         <span>Segunda a sexta: das 08:00 às 18:00.</span>                       
-                        <span>Telefone: (11) 91000-8056</span>
+                        <span>Telefone: (11) 3171-0549</span>
                         <span>Whatsapp: (11) 99425-3638</span>
                         <span>Whatsapp: (11) 99448-1381</span>
                     </div>
@@ -438,7 +438,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
 
             <hr />
-            <p class="direitos">© 2022 Sotel Sistemas - Todos os direitos reservados. </p>
+            <p class="direitos">© 2023 Sotel Tecnologia - Todos os direitos reservados. </p>
         </div>
     </footer>
 
