--- a/index.html
+++ b/index.html
@@ -419,6 +419,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <span>Segunda a sexta: das 08:00 às 18:00.</span>                       
                         <span>Telefone: (11) 3171-0549</span>
                         <span>Whatsapp: (11) 91000-8056</span>
+                        <span>E-mail: atendimento@sotel.com.br</span>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-3">
