--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 </div>
 
-<div id="Solicite Acesso"></div>
+<div id="Novidades"></div>
 
 <div class="container">
     <div class="row">
