--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row">
                 <div class="col-md-5">
                     <div class="textBanner">
-                        <h3 class="animated">Fechadura Digital</h3>
-                        <p class="animated">Sua segurança nas pontas dos dedos com elegância.</p>
+                        <h3 class="animated">Portaria Remota</h3>
+                        <p class="animated">Seu Condomínio na Palma da Mão.</p>
                         <p class="animated">Saiba mais</p3>
                             <p class="animated">11 91000-8056</p3>
                      </div>
