--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/png" sizes="16x16"  href="/favicons/favicon-16x16.png">
+    link rel="shortcut icon" href="/favicon.ico">
 
     <title>Home - Sotel Soluções Integradas</title>
     <base >
